# automatic-camera-pointcloud-calibration

./: CMakeLists.txt  LICENSE.txt  README.md  package.xml
data/: camchain-stereo_calib_2021-11-05-23-19-14.yaml  corner_lidar.txt  corner_lidar_104_1.txt  corner_lidar_example.txt  corner_lidar_old.txt  corner_lidar_room.txt  corner_photo.txt  corner_photo_104_1.txt  corner_photo_extended.txt  corner_photo_old.txt  corner_photo_room.txt  intrinsic.yaml  intrinsic_old.yaml  temp.txt
data/feature/: corner_photo.txt  corner_pointcloud.txt
data/parameters/: extrinsic.txt  extrinsic_104.txt  extrinsic_radar-camera.txt  extrinsic_true.txt  intrinsic.txt  reprojection_error-64.txt  reprojection_error_104_1.txt  reprojection_error_104_2.txt
launch/: GetExtrinsic.launch  colorLidar.launch  color_lidar.rviz  cornerLidar.launch  cornerPhoto.launch  feature_extraction.rviz  feature_extraction_camera.launch  feature_extraction_pointcloud.launch  feature_manual.rviz  feature_manual_camera.launch  feature_manual_lidar.launch  getExt1.launch  pointcloud_display.rviz  projectCloud.launch  projectradar.launch
src/: cam_lid_external1.cpp  click_record.cpp  color_lidar_display.cpp  common.h  corner_photo.cpp  cornerpoint.cpp  data.cpp  data.h  feature_extraction_camera.cpp  feature_extraction_pointcloud.cpp  feature_manual_pointcloud.cpp  get_extrinsic.cpp  projectCloud.cpp  projectradar.cpp  result_verify.h
